[package]
name = "metagoblin"
version = "0.0.1"
authors = ["m4b <m4b.github.io@gmail.com>"]

[[bin]]
name = "analyze"
path = "src/main.rs"

[dependencies]
goblin = { git = "https://github.com/m4b/goblin", version = "0.0.12"}
theban_interval_tree = "0.7.1"
memrange = "0.1.3"
log = "0.3.8"
env_logger = "0.4.3"
