[package]
name = "metagoblin"
version = "0.1.2"
authors = ["m4b <m4b.github.io@gmail.com>"]
license = "MIT"
keywords = ["goblin", "elf", "mach", "pe", "metadata"]
repository = "https://github.com/m4b/metagoblin"
documentation = "https://docs.rs/metagoblin"
description = "Generates metadata for a binary format using goblin"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
edition = "2018"

[dependencies]
goblin = "0.0.21"
theban_interval_tree = "0.7.1"
memrange = "0.1.3"
log = "0.4.5"
